--- a/Competitive Programming/Competitive Programming.csproj
+++ b/Competitive Programming/Competitive Programming.csproj
@@ -8,4 +8,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Solved\20230906\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Solved\20230906\" />
+  </ItemGroup>
 </Project>
